tests/positive/opaque_pointer.ax
module opaque_pointer;

extern c {
    opaque struct File;
    fn puts(s: *const u8) -> i32 @name("puts");
}

fn accept(file: *mut File) -> i32 {
    return 0;
}

fn main() -> i32 {
    puts(c"opaque pointer");
    return 0;
}
