tests/negative/opaque_value.ax
module opaque_value;

extern c {
    opaque struct File;
}

fn bad(file: File) -> i32 {
    return 0;
}

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    return 0;
}
